# Copyright (c) 2023 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//build/buildflag_header.gni")
import("buildflags.gni")

source_set("brave_domains") {
  sources = [
    "service_domains.cc",
    "service_domains.h",
  ]

  deps = [
    ":buildflags",
    "//base",
  ]
}

buildflag_header("buildflags") {
  header = "buildflags.h"
  flags = [
    "BRAVE_SERVICES_PRODUCTION_DOMAIN=\"$brave_services_production_domain\"",
    "BRAVE_SERVICES_STAGING_DOMAIN=\"$brave_services_staging_domain\"",
    "BRAVE_SERVICES_DEV_DOMAIN=\"$brave_services_dev_domain\"",
  ]

  # Consumers should use the brave_domains helper functions.
  visibility = [
    ":*",
    "//brave/components/brave_news/browser/test:*",
  ]
}

source_set("unit_tests") {
  testonly = true

  sources = [ "service_domains_unittest.cc" ]

  deps = [
    ":brave_domains",
    ":buildflags",
    "//base",
    "//testing/gmock",
    "//testing/gtest",
  ]
}
