# Copyright (c) 2023 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//brave/build/config.gni")
import("//build/config/ui.gni")

declare_args() {
  brave_services_production_domain = ""
  brave_services_staging_domain = ""
  brave_services_dev_domain = ""
}
